Added YT link to presentation Added PDF presentation

--- a/assets/fantom-deck.html
+++ b/assets/fantom-deck.html
@@ -573,6 +573,7 @@ sqd deploy .
 </span>
 <p>Docs <a href="https://docs.subsquid.io">docs.subsquid.io</a><br />
 GitHub <a href="https://github.com/subsquid/">github.com/subsquid/</a><br />
+YouTube <a href="https://www.youtube.com/channel/@subsquid">youtube.com/c/subsquid</a><br />
 Discord <a href="https://discord.gg/subsquid">discord.gg/subsquid</a><br />
 Telegram <a href="https://t.me/HydraDevs">t.me/HydraDevs</a><br />
 Medium <a href="https://medium.com/subsquid">medium.com/subsquid</a></p>
